[package]
name = "union_sdk"
version = "0.1.1"
edition = "2021"
authors = ["白菜林 <hi@nav.xin>"]
description = "开发平台 Rust SDK, 集成简单快捷，也可以快速添加本SDK没有集成的接口。"
keywords = ["union_sdk","union-sdk", "topsdk","taobao","taobao-sdk"]
license = " MIT OR Apache-2.0"
homepage = "https://3ae.cn/"
repository = "https://github.com/clin003/union_sdk"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
hex = "0.4.3"
hmac = "0.11.0"
reqwest = {version="0.11.4",features=["json"]}
# serde = {version = "1.0.130",features = ["derive"]}
# serde_json = "1.0.67"
sha2 = "0.9.8"
sha256 = "1.0.2"
tokio = { version = "1.11.0", features = ["full"] }
dotenv="0.15.0"